DSND-2876: Implement structured logging